vérification et suppression des print de debug

--- a/active_html/notice.html
+++ b/active_html/notice.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User manual - Creapass</title>
+    <title>Notice d'emploi - Creapass</title>
     <style>
         /* === Styles de base === */
         body {
@@ -123,72 +123,75 @@
 <body>
     <header style="background-color: transparent;">
         <p style="text-align: center"><img src="images_creapass/logo.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
-        <h1>User manual - Creapass</h1>
-        <p class="note">Random password generator that is reproducible and standalone</p>
+        <h1>Notice d'emploi - Creapass</h1>
+        <p class="note">Générateur de mots de passe aléatoires reproductibles et autonome</p>
     </header>
 
     <section class = "section-card">
-        <h2>1 - Initialization</h2>
-        <p>When you launch Creapass for the first time, you will see this window:</p>
+        <h2>1 - Initialisation</h2>
+        <p>Lorsque vous lancez Creapass pour la première fois, vous allez voir cette fenêtre :</p>
         <p style="text-align: center"><img src="images_creapass/fig_1.webp" alt="Fenêtre d'initialisation"/></p>
-        <p class="fig-caption">Figure 1: Initialization window</p>
+        <p class="fig-caption">Figure 1 : Fenêtre d'initialisation</p>
 
-        <p>The software has been designed to be used without a mouse (it's easier and faster, but the mouse is still there). The active area is surrounded by a blue frame; pressing the “Enter” key validates and automatically moves to the next area.</p>
+        <p>Le logiciel a été conçu pour être utilisé sans la souris (c'est plus facile et plus rapide mais la souris demeure). La zone en service est entourée d'un cadre bleu, l'appui sur la touche « Entrée » valide et passe automatiquement à la zone suivante.</p>
 
-        <p class="warning">WARNING: Your username and password are stored in encrypted form (digital fingerprint). It is therefore <strong>IMPERATIVE THAT YOU REMEMBER THEM</strong>, as they cannot be recovered.</p>
+        <p class="warning">ATTENTION : Votre identifiant et votre mot de passe sont enregistrés sous forme codée (empreinte numérique). Il est donc <strong>IMPÉRATIF DE VOUS EN SOUVENIR</strong> car ils ne peuvent pas être récupérés.</p>
 
-        <p style="text-align: center"><a href="conseils_ini.html">→ See our tips for choosing a good username and password ←</a></p>
+        <p style="text-align: center"><a href="conseils_ini.html">→ Consultez nos conseils pour choisir un bon identifiant et mot de passe ←</a></p>
 
-        <p id="Lorsque vous avez entré ces données">After entering this information, the window will change to:</p>
+        <p id="Lorsque vous avez entré ces données">Après avoir entré ces données, la fenêtre devient :</p>
         <p style="text-align: center"><img src="images_creapass/fig_2.webp" alt="Fenêtre de validation"/></p>
-        <p class="fig-caption">Figure 2: Initialization validation</p>
+        <p class="fig-caption">Figure 2 : Validation de l'initialisation</p>
     </section>
 
     <section class = "section-card">
-        <h2>2 - Initial use</h2>
-        <p>After initialization, this window will appear at startup:</p>
+        <h2>2 - Utilisation de départ</h2>
+        <p>Après l'initialisation, cette fenêtre apparaîtra au démarrage :</p>
         <p style="text-align: center"><img src="images_creapass/fig_3.webp" alt="Fenêtre principale"/></p>
-        <p class="fig-caption">Figure 3: Main window</p>
+        <p class="fig-caption">Figure 3 : Fenêtre principale</p>
 
-        <p>You must enter your password to access the features. Then:</p>
+        <p>Vous devez saisir votre mot de passe pour accéder aux fonctionnalités. Ensuite :</p>
         <ol>
-            <li>Select or enter a site/application</li>
-            <li>Confirm with Enter</li>
-            <li>The generated password is automatically copied to the clipboard</li>
+            <li>Sélectionnez ou saisissez un site/application</li>
+            <li>Validez avec Entrée</li>
+            <li>Le mot de passe généré est automatiquement copié dans le presse-papiers</li>
         </ol>
 
         <p style="text-align: center"><img src="images_creapass/fig_4.webp" alt="Génération de mot de passe"/></p>
-        <p class="fig-caption">Figure 4: Password generated</p>
+        <p class="fig-caption">Figure 4 : Mot de passe généré</p>
     </section>
 
     <section class = "section-card">
-        <h2>3 - Mini interface</h2>
-        <p>For more discreet use, activate the mini interface via the menu.<br>Please note that this menu option is only accessible after validating the password.</p>
+        <h2>3 - Mini-interface</h2>
+        <p>Pour une utilisation plus discrète, activez la mini-interface via le menu.<br>Attention, cette option du menu n'est accessible qu'après validation du mot de passe.</p>
         <p style="text-align: center"><img src="images_creapass/fig_5.webp" alt="Activation mini-interface"/></p>
-        <p class="fig-caption">Figure 5: Activating the mini interface</p>
+        <p class="fig-caption">Figure 5 : Activation de la mini-interface</p>
 
-        <p>The mini interface will then appear, along with an icon in the area next to the clock:<br>Right-clicking on the icon will bring up a menu.</p>
+        <p>La mini-interface apparaît alors, ainsi qu'une icône dans la zone à côté de l'horloge :<br>Un clic droit sur l'icône fait apparaître un menu</p>
         <p style="text-align: center"><img src="images_creapass/fig_6.webp" alt="Mini-interface"/></p>
-        <p class="fig-caption">Figure 6: Mini interface</p>
-        <p>If you need to move this window, press “Alt-m” to display the traditional system bar</p>
+        <p class="fig-caption">Figure 6 : Mini-interface</p>
+        <p style="text-align: center"><img src="images_creapass/fig_8.webp" alt="Mini-interface"/></p>
+        <p class="fig-caption">Figure 8 : Icône côté horloge : 1-au repos, 2-au survol, 3-au clic droit</p>
+        <p>Si vous devez déplacer cette fenêtre, appuyez sur « Alt-m » pour avoir la traditionnelle barre-système</p>
         <p style="text-align: center"><img src="images_creapass/fig_7.webp" alt="Mini-interface déplaçable"/></p>
-        <p class="fig-caption">Figure 6: Movable mini-interface</p>
-        <p class="note">Tip: After selecting the site, press Enter to generate a password, then Enter again to clear and prepare for a new generation.</p>
-        <p>If you have chosen to open directly in reduced mode, you will be asked for your password.<br><strong>Please note</strong> that this assumes you are familiar with the software and that this is your usual working mode; you will no longer have access to the “language” and “theme” options.</p>
+        <p class="fig-caption">Figure 6 : Mini-interface déplaçable</p>
+        
+        <p class="note">Astuce : Après choix du site, appuyez sur Entrée pour générer un mot de passe, puis à nouveau Entrée pour effacer et préparer une nouvelle génération.</p>
+        <p>Si vous avez choisi d'ouvrir directement sous la forme réduite, votre mot de passe vous est demandé.<br><strong>Attention,</strong>Ça suppose que vous maîtrisez le logiciel et que c'est votre mode travail courant ; vous n'aurez plus accès aux options « langue » et « thème »</p>
     </section>
 
     <section class = "section-card">
-        <h2>Help and shortcuts</h2>
+        <h2>Aide et raccourcis</h2>
         <ul>
-            <li><strong>F1</strong>: Contextual help</li>
-            <li><strong>Ctrl+Q</strong>: Exit the application</li>
-            <li><strong>Ctrl+V</strong>: Paste the generated password</li>
-            <li><strong>Alt+m</strong>: Show/hide the system bar</li>
+            <li><strong>F1</strong> : Aide contextuelle</li>
+            <li><strong>Ctrl+Q</strong> : Quitter l'application</li>
+            <li><strong>Ctrl+V</strong> : Coller le mot de passe généré</li>
+            <li><strong>Alt+m</strong>: Afficher/supprimer la barre système</li>
         </ul>
     </section>
 
     <div class="footer">
-        <p>Creapass - Secure and reproducible password generator</p>
+        <p>Creapass - Générateur de mots de passe sécurisés et reproductibles</p>
     </div>
 </body>
 </html>
