--- a/langues/HTML_Français/notice.html
+++ b/langues/HTML_Français/notice.html
@@ -187,6 +187,8 @@
             <li><strong>Ctrl+Q</strong> : Quitter l'application</li>
             <li><strong>Ctrl+V</strong> : Coller le mot de passe généré</li>
             <li><strong>Alt+m</strong>: Afficher/supprimer la barre système</li>
+            <li><strong>Alt+s</strong>: (disponible uniquement en mini-interface) Revenir à l'interface normale</li>
+            <li><strong>Ctrl+Alt+i+i</strong>: (Tapez 2 fois sur "i" avec Ctrl-Alt enfoncés)  Réinitialiser totalement le programme</li>
         </ul>
     </section>
 
