--- a/langues/HTML_Anglais/danger.html
+++ b/langues/HTML_Anglais/danger.html
@@ -2,24 +2,24 @@
 <html lang="en">
 
 <body>
-<h1>⚠️ WARNING: Complete Password Manager Reset</h1>
-<h3><strong>Associated Risks:</strong></h3>
+<body>
+<h1>⚠️ WARNING: Complete reset of the password manager</h1>
+<h3><strong>Associated risks:</strong></h3>
 <ul>
-    <li>- This operation will <strong>reset</strong> all settings related to your password generation.</li>
-    <li>- <strong>Any change</strong>, even minor (a single character in your identifier or master password), will make it <strong>impossible</strong> to regenerate existing passwords for already registered sites.</li>
-    <li>- <strong>No undo possible</strong> after confirmation.</li>
+    <li>- This operation will <strong>reset</strong> all settings related to the generation of your passwords.</li>
+    <li>- <strong>Any change</strong>, even a minor one (a single character in your username or master password), will make it <strong>impossible</strong> to regenerate existing passwords for already saved sites.</li>
+    <li>- <strong>No going back</strong> after confirmation. </li>
 </ul>
-<h3><strong>Possible Consequences:</strong></h3>
+<h3><strong>Possible consequences:</strong></h3>
 <ul>
-    <li>- Loss of access to your online accounts if you don’t know the current passwords.</li>
-    <li>- Need to manually reset each password on every affected site.</li>
+    <li>- Loss of access to your online accounts if you do not know the current passwords. </li>
+    - Need to manually reset each password on each affected site.
 </ul>
-<h3><strong>Recommendations Before Proceeding:</strong></h3>
+<h3><strong>Recommendations before continuing:</strong></h3>
 <ol>
-    <li><strong>Back up</strong> the hidden file <code>id.json</code> to an external drive (USB, hard drive, secure cloud).</li>
-    <li>Ensure you have a copy of <strong>all your important passwords</strong>.</li>
-    <li>If you are not technically proficient or unsure of the consequences, <strong>seek help from a professional</strong>.</li>
+    <li>Back up</strong> the hidden <code>id.json</code> file to an external device (USB drive, hard drive, secure cloud). </li>
+    <li>Make sure you have a copy of <strong>all your important passwords</strong>.</li>
+    <li>If you are not a technician or are unsure of the consequences, <strong>seek professional help</strong>.</li>
 </ol>
 </body>
 </html>
-
