--- a/langues/HTML_Espagnol/danger.html
+++ b/langues/HTML_Espagnol/danger.html
@@ -2,24 +2,24 @@
 <html lang="fr">
 
 <body>
+<body>
 <h1>⚠️ ATENCIÓN: Restablecimiento completo del gestor de contraseñas</h1>
 <h3><strong>Riesgos asociados:</strong></h3>
 <ul>
-    <li>- Esta operación <strong>restablecerá</strong> todos los ajustes relacionados con la generación de sus contraseñas.</li>
-    <li>- <strong>Cualquier cambio</strong>, incluso mínimo (un solo carácter en su identificador o contraseña maestra), hará <strong>imposible</strong> regenerar las contraseñas existentes para los sitios ya registrados.</li>
-    <li>- <strong>No habrá posibilidad de deshacer</strong> la acción después de confirmar.</li>
+    <li>- Esta operación <strong>restablecerá</strong> todos los parámetros relacionados con la generación de sus contraseñas.</li>
+    <li>- <strong>Cualquier cambio</strong>, por mínimo que sea (un solo carácter en su nombre de usuario o contraseña maestra), hará <strong>imposible</strong> regenerar las contraseñas existentes para los sitios ya registrados.</li>
+    <li>- <strong>No hay vuelta atrás</strong> una vez validada la operación.</li>
 </ul>
 <h3><strong>Posibles consecuencias:</strong></h3>
 <ul>
     <li>- Pérdida de acceso a sus cuentas en línea si no conoce las contraseñas actuales.</li>
-    <li>- Necesidad de restablecer manualmente cada contraseña en cada sitio afectado.</li>
+    <li>- Necesidad de restablecer manualmente cada contraseña en cada sitio web afectado.</li>
 </ul>
 <h3><strong>Recomendaciones antes de continuar:</strong></h3>
 <ol>
-    <li><strong>Haga una copia de seguridad</strong> del archivo oculto <code>id.json</code> en un soporte externo (USB, disco duro, nube segura).</li>
-    <li>Verifique que tiene una copia de <strong>todas sus contraseñas importantes</strong>.</li>
+    <li><strong>Guarde</strong> el archivo oculto <code>id.json</code> en un soporte externo (memoria USB, disco duro, nube segura). </li>
+    <li>Compruebe que dispone de una copia de <strong>todas sus contraseñas importantes</strong>.</li>
     <li>Si no es técnico o no domina las consecuencias, <strong>pida ayuda a un profesional</strong>.</li>
 </ol>
 </body>
 </html>
-
