Ajout de styles CSS pour améliorer l'apparence de la page notice et création d'un fichier user_data.json par défaut. Remplacement du logo dans la page de don et ajout du logo dans plusieurs langues.

--- a/langues/HTML_Français/don.html
+++ b/langues/HTML_Français/don.html
@@ -129,7 +129,7 @@
 <body>
     <header style="background-color: transparent;">
         <h1>🙂 Merci d’utiliser l'application</h1>
-        <p style="text-align: center"><img src="images_creapass/logo2.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
+        <p style="text-align: center"><img src="images_creapass/logo3.gif" alt="Logo Creapass" style="border:none; box-shadow:none;">
         <p class="note">Vous appréciez cette application ? - J’espère qu’elle vous rend service au quotidien.</p>
     </header>
 
@@ -153,9 +153,7 @@
                 action="https://www.paypal.com/donate"
                 method="post"
                 target="_top"
-                rel="noopener noreferrer"  <!-- Sécurité -->
-                aria-label="Donner pour Creapass" <!-- Accessibilité -->
-                >
+                rel="noopener noreferrer"  aria-label="Donner pour Creapass"> <!-- Accessibilité -->                >
                 <input type="hidden" name="hosted_button_id" value="BGZA4Q88FLJTG">
                 <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_donateCC_LG.gif" alt="Donner avec PayPal">
             </form>
