--- a/active_html/notice.html
+++ b/active_html/notice.html
@@ -10,7 +10,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Police moderne et lisible */
             line-height: 1.6; /* Espacement confortable entre les lignes */
             color: #333; /* Couleur de texte foncée pour meilleure lisibilité */
-            max-width: 900px; /* Largeur max pour une lecture confortable */
+            max-width: 850px; /* Largeur max pour une lecture confortable */
             margin: 0 auto; /* Centrage de la page */
             padding: 20px; /* Marge intérieure */
             background-color: #f9f9f9; /* Fond légèrement gris */
@@ -128,10 +128,66 @@
     </header>
 
     <section class = "section-card">
-        <p>Désolés, Cette page n'est pas encore traduite. Vous pouvez vous reporter sur une des langues disponibles en choisissant « Langues / (choix-langue) » </p>
-        <p>Sorry, this page is not yet translated. You can refer to one of the available languages by selecting "Languages / (language-choice)"</p>
-        <p>Lo sentimos, esta página aún no está traducida. Puede referirse a uno de los idiomas disponibles seleccionando "Idiomas / (elección-de-idioma)"</p>
-        <p>Ne pare rău, această pagină nu a fost încă tradusă. Puteți consulta una dintre limbile disponibile selectând „Limbi / (alege-limba)”</p>
+        <h2>1 - Initialisation</h2>
+        <p>Lorsque vous lancez Creapass pour la première fois, vous allez voir cette fenêtre :</p>
+        <p style="text-align: center"><img src="images_creapass/fig_1.webp" alt="Fenêtre d'initialisation"/></p>
+        <p class="fig-caption">Figure 1 : Fenêtre d'initialisation</p>
+
+        <p>Le logiciel a été conçu pour être utilisé sans la souris (c'est plus facile et plus rapide mais la souris demeure). La zone en service est entourée d'un cadre bleu, l'appui sur la touche « Entrée » valide et passe automatiquement à la zone suivante.</p>
+
+        <p class="warning">ATTENTION : Votre identifiant et votre mot de passe sont enregistrés sous forme codée (empreinte numérique). Il est donc <strong>IMPÉRATIF DE VOUS EN SOUVENIR</strong> car ils ne peuvent pas être récupérés.</p>
+
+        <p style="text-align: center"><a href="conseils_ini.html">→ Consultez nos conseils pour choisir un bon identifiant et mot de passe ←</a></p>
+
+        <p id="Lorsque vous avez entré ces données">Après avoir entré ces données, la fenêtre devient :</p>
+        <p style="text-align: center"><img src="images_creapass/fig_2.webp" alt="Fenêtre de validation"/></p>
+        <p class="fig-caption">Figure 2 : Validation de l'initialisation</p>
+    </section>
+
+    <section class = "section-card">
+        <h2>2 - Utilisation de départ</h2>
+        <p>Après l'initialisation, cette fenêtre apparaîtra au démarrage :</p>
+        <p style="text-align: center"><img src="images_creapass/fig_3.webp" alt="Fenêtre principale"/></p>
+        <p class="fig-caption">Figure 3 : Fenêtre principale</p>
+
+        <p>Vous devez saisir votre mot de passe pour accéder aux fonctionnalités. Ensuite :</p>
+        <ol>
+            <li>Sélectionnez ou saisissez un site/application</li>
+            <li>Validez avec Entrée</li>
+            <li>Le mot de passe généré est automatiquement copié dans le presse-papiers</li>
+        </ol>
+
+        <p style="text-align: center"><img src="images_creapass/fig_4.webp" alt="Génération de mot de passe"/></p>
+        <p class="fig-caption">Figure 4 : Mot de passe généré</p>
+    </section>
+
+    <section class = "section-card">
+        <h2>3 - Mini-interface</h2>
+        <p>Pour une utilisation plus discrète, activez la mini-interface via le menu.<br>Attention, cette option du menu n'est accessible qu'après validation du mot de passe.</p>
+        <p style="text-align: center"><img src="images_creapass/fig_5.webp" alt="Activation mini-interface"/></p>
+        <p class="fig-caption">Figure 5 : Activation de la mini-interface</p>
+
+        <p>La mini-interface apparaît alors, ainsi qu'une icône dans la zone à côté de l'horloge :<br>Un clic droit sur l'icône fait apparaître un menu</p>
+        <p style="text-align: center"><img src="images_creapass/fig_6.webp" alt="Mini-interface"/></p>
+        <p class="fig-caption">Figure 6 : Mini-interface</p>
+        <p style="text-align: center"><img src="images_creapass/fig_8.webp" alt="Mini-interface"/></p>
+        <p class="fig-caption">Figure 8 : Icône côté horloge : 1-au repos, 2-au survol, 3-au clic droit</p>
+        <p>Si vous devez déplacer cette fenêtre, appuyez sur « Alt-m » pour avoir la traditionnelle barre-système</p>
+        <p style="text-align: center"><img src="images_creapass/fig_7.webp" alt="Mini-interface déplaçable"/></p>
+        <p class="fig-caption">Figure 6 : Mini-interface déplaçable</p>
+        
+        <p class="note">Astuce : Après choix du site, appuyez sur Entrée pour générer un mot de passe, puis à nouveau Entrée pour effacer et préparer une nouvelle génération.</p>
+        <p>Si vous avez choisi d'ouvrir directement sous la forme réduite, votre mot de passe vous est demandé.<br><strong>Attention,</strong>Ça suppose que vous maîtrisez le logiciel et que c'est votre mode travail courant ; vous n'aurez plus accès aux options « langue » et « thème »</p>
+    </section>
+
+    <section class = "section-card">
+        <h2>Aide et raccourcis</h2>
+        <ul>
+            <li><strong>F1</strong> : Aide contextuelle</li>
+            <li><strong>Ctrl+Q</strong> : Quitter l'application</li>
+            <li><strong>Ctrl+V</strong> : Coller le mot de passe généré</li>
+            <li><strong>Alt+m</strong>: Afficher/supprimer la barre système</li>
+        </ul>
     </section>
 
     <div class="footer">
