Update Romanian localization: remove unused images, modify HTML content, and adjust user data settings

--- a/langues/HTML_Anglais/notice.html
+++ b/langues/HTML_Anglais/notice.html
@@ -122,7 +122,7 @@
 </head>
 <body>
     <header style="background-color: transparent;">
-        <p style="text-align: center"><img src="images_creapass/logo.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
+        <p style="text-align: center"><img src="../images_creapass/logo.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
         <h1>User manual - Creapass</h1>
         <p class="note">Random password generator that is reproducible and standalone</p>
     </header>
@@ -130,7 +130,7 @@
     <section class = "section-card">
         <h2>1 - Initialization</h2>
         <p>When you launch Creapass for the first time, you will see this window:</p>
-        <p style="text-align: center"><img src="images_creapass/fig_1.webp" alt="Fenêtre d'initialisation"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_1.webp" alt="Fenêtre d'initialisation"/></p>
         <p class="fig-caption">Figure 1: Initialization window</p>
 
         <p>The software has been designed to be used without a mouse (it's easier and faster, but the mouse is still there). The active area is surrounded by a blue frame; pressing the “Enter” key validates and automatically moves to the next area.</p>
@@ -140,14 +140,14 @@
         <p style="text-align: center"><a href="conseils_ini.html">→ See our tips for choosing a good username and password ←</a></p>
 
         <p id="Lorsque vous avez entré ces données">After entering this information, the window will change to:</p>
-        <p style="text-align: center"><img src="images_creapass/fig_2.webp" alt="Fenêtre de validation"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_2.webp" alt="Fenêtre de validation"/></p>
         <p class="fig-caption">Figure 2: Initialization validation</p>
     </section>
 
     <section class = "section-card">
         <h2>2 - Initial use</h2>
         <p>After initialization, this window will appear at startup:</p>
-        <p style="text-align: center"><img src="images_creapass/fig_3.webp" alt="Fenêtre principale"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_3.webp" alt="Fenêtre principale"/></p>
         <p class="fig-caption">Figure 3: Main window</p>
 
         <p>You must enter your password to access the features. Then:</p>
@@ -157,21 +157,21 @@
             <li>The generated password is automatically copied to the clipboard</li>
         </ol>
 
-        <p style="text-align: center"><img src="images_creapass/fig_4.webp" alt="Génération de mot de passe"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_4.webp" alt="Génération de mot de passe"/></p>
         <p class="fig-caption">Figure 4: Password generated</p>
     </section>
 
     <section class = "section-card">
         <h2>3 - Mini interface</h2>
         <p>For more discreet use, activate the mini interface via the menu.<br>Please note that this menu option is only accessible after validating the password.</p>
-        <p style="text-align: center"><img src="images_creapass/fig_5.webp" alt="Activation mini-interface"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_5.webp" alt="Activation mini-interface"/></p>
         <p class="fig-caption">Figure 5: Activating the mini interface</p>
 
         <p>The mini interface will then appear, along with an icon in the area next to the clock:<br>Right-clicking on the icon will bring up a menu.</p>
-        <p style="text-align: center"><img src="images_creapass/fig_6.webp" alt="Mini-interface"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_6.webp" alt="Mini-interface"/></p>
         <p class="fig-caption">Figure 6: Mini interface</p>
         <p>If you need to move this window, press “Alt-m” to display the traditional system bar</p>
-        <p style="text-align: center"><img src="images_creapass/fig_7.webp" alt="Mini-interface déplaçable"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_7.webp" alt="Mini-interface déplaçable"/></p>
         <p class="fig-caption">Figure 6: Movable mini-interface</p>
         <p class="note">Tip: After selecting the site, press Enter to generate a password, then Enter again to clear and prepare for a new generation.</p>
         <p>If you have chosen to open directly in reduced mode, you will be asked for your password.<br><strong>Please note</strong> that this assumes you are familiar with the software and that this is your usual working mode; you will no longer have access to the “language” and “theme” options.</p>
@@ -184,11 +184,13 @@
             <li><strong>Ctrl+Q</strong>: Exit the application</li>
             <li><strong>Ctrl+V</strong>: Paste the generated password</li>
             <li><strong>Alt+m</strong>: Show/hide the system bar</li>
+            <li><strong>Alt+s</strong>: (available only in mini-interface) Return to normal interface</li>
+            <li><strong>Ctrl+Alt+i+i</strong>: (Press "i" twice while holding Ctrl+Alt) Completely reset the program</li>            
         </ul>
     </section>
 
-    <div class="footer">
-        <p>Creapass - Secure and reproducible password generator</p>
-    </div>
+    <footer style="text-align: center">
+      Original en français, traductions mistral.ai et/ou deepl.com<br>&copy; Jean Dalbrut – Auteur de CréaPass
+    </footer>
 </body>
 </html>
