--- a/langues/HTML_Espagnol/notice.html
+++ b/langues/HTML_Espagnol/notice.html
@@ -122,7 +122,7 @@
 </head>
 <body>
     <header style="background-color: transparent;">
-        <p style="text-align: center"><img src="images_creapass/logo.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
+        <p style="text-align: center"><img src="../images_creapass/logo.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
         <h1>Manual del usuario - Creapass</h1>
         <p class="note">Generador de contraseñas aleatorias autónomo y reproducible</p>
     </header>
@@ -130,7 +130,7 @@
     <section class = "section-card">
         <h2>1 - Inicialización</h2>
         <p>Cuando inicie Creapass por primera vez, verá esta ventana:</p>
-        <p style="text-align: center"><img src="images_creapass/fig_1.webp" alt="Fenêtre d'initialisation"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_1.webp" alt="Fenêtre d'initialisation"/></p>
         <p class="fig-caption">Figura 1: Ventana de inicialización</p>
 
         <p>El software ha sido diseñado para ser utilizado sin ratón (es más fácil y rápido, pero el ratón permanece). La zona en uso está rodeada por un marco azul. Al pulsar la tecla «Intro» se valida y se pasa automáticamente a la zona siguiente.</p>
@@ -140,14 +140,14 @@
         <p style="text-align: center"><a href="conseils_ini.html">→ Consulte nuestros consejos para elegir un buen nombre de usuario y contraseña ←.</a></p>
 
         <p id="Lorsque vous avez entré ces données">Tras introducir estos datos, la ventana se convierte en :</p>
-        <p style="text-align: center"><img src="images_creapass/fig_2.webp" alt="Fenêtre de validation"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_2.webp" alt="Fenêtre de validation"/></p>
         <p class="fig-caption">Figura 2: Validación de la inicialización</p>
     </section>
 
     <section class = "section-card">
         <h2>2 - Uso inicial</h2>
         <p>Tras la inicialización, esta ventana aparecerá al arrancar:</p>
-        <p style="text-align: center"><img src="images_creapass/fig_3.webp" alt="Fenêtre principale"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_3.webp" alt="Fenêtre principale"/></p>
         <p class="fig-caption">Figura 3: Ventana principal</p>
 
         <p>Deberá introducir su contraseña para acceder a las funciones. Siguiente :</p>
@@ -157,21 +157,21 @@
             <li>La contraseña generada se copia automáticamente en el portapapeles</li>
         </ol>
 
-        <p style="text-align: center"><img src="images_creapass/fig_4.webp" alt="Génération de mot de passe"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_4.webp" alt="Génération de mot de passe"/></p>
         <p class="fig-caption">Figura 4: Contraseña generada</p>
     </section>
 
     <section class = "section-card">
         <h2>3 - Mini-interfaz</h2>
         <p>Para un uso más discreto, active la mini-interfaz a través del menú.<br>Tenga en cuenta que sólo se puede acceder a esta opción de menú una vez validada la contraseña.</p>
-        <p style="text-align: center"><img src="images_creapass/fig_5.webp" alt="Activation mini-interface"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_5.webp" alt="Activation mini-interface"/></p>
         <p class="fig-caption">Figura 5: Activación de la mini-interfaz</p>
 
         <p>Aparece entonces la mini-interfaz, junto con un icono en la zona situada junto al reloj:<br>Pulse con el botón derecho del ratón sobre el icono para abrir un menú.</p>
-        <p style="text-align: center"><img src="images_creapass/fig_6.webp" alt="Mini-interface"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_6.webp" alt="Mini-interface"/></p>
         <p class="fig-caption">Figura 6: Miniinterfaz</p>
         <p>Si necesita mover esta ventana, pulse 'Alt-m' para obtener la barra de sistema tradicional</p>
-        <p style="text-align: center"><img src="images_creapass/fig_7.webp" alt="Mini-interface déplaçable"/></p>
+        <p style="text-align: center"><img src="../images_creapass/fig_7.webp" alt="Mini-interface déplaçable"/></p>
         <p class="fig-caption">Figura 6: Miniinterfaz desplazable</p>
         <p class="note">Sugerencia: Tras elegir el sitio, pulse Intro para generar una contraseña y, a continuación, vuelva a Intro para borrarla y preparar una nueva generación.</p>
         <p>Si ha elegido abrir directamente en formato reducido, se le pedirá su contraseña.<br><strong>Atención:</strong> esto supone que domina el programa y que éste es su modo de trabajo actual; ya no tendrá acceso a las opciones «idioma» y «tema».</p>
@@ -184,11 +184,13 @@
             <li><strong>Ctrl+Q</strong>: Salir de la aplicación</li>
             <li><strong>Ctrl+V</strong>: Pegar la contraseña generada</li>
             <li><strong>Alt+m</strong>: Mostrar/quitar la barra del sistema</li>
+            <li><strong>Alt+s</strong>: (disponible solo en mini-interfaz) Volver a la interfaz normal</li>
+            <li><strong>Ctrl+Alt+i+i</strong>: (Presione dos veces "i" con Ctrl+Alt pulsados) Reiniciar completamente el programa</li>
         </ul>
     </section>
 
-    <div class="footer">
-        <p>Creapass - Generador de contraseñas seguro y reproducible</p>
-    </div>
+    <footer style="text-align: center">
+      Original en français, traductions mistral.ai et/ou deepl.com<br>&copy; Jean Dalbrut – Auteur de CréaPass
+    </footer>
 </body>
 </html>
