--- a/langues/HTML_Français/notice.html
+++ b/langues/HTML_Français/notice.html
@@ -4,130 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notice d'emploi - Creapass</title>
-    <style>
-        /* === Styles de base === */
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Police moderne et lisible */
-            line-height: 1.6; /* Espacement confortable entre les lignes */
-            color: #333; /* Couleur de texte foncée pour meilleure lisibilité */
-            max-width: 850px; /* Largeur max pour une lecture confortable */
-            margin: 0 auto; /* Centrage de la page */
-            padding: 20px; /* Marge intérieure */
-            background-color: #f9f9f9; /* Fond légèrement gris */
-        }
+    <link rel="stylesheet" href="styles.css">
 
-        .section-card {
-            background-color: #fefefe; /* Blanc légèrement plus chaud */
-            border-radius: 8px; /* Coins légèrement arrondis */
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1); /* Ombre très subtile */
-            padding: 25px;
-            margin: 30px auto;
-            max-width: 850px; /* Largeur optimale pour la lecture */
-            border-left: 4px solid #3498db;
-
-        }
-
-        /* === Titres === */
-        h1 {
-            color: #2c3e50; /* Couleur bleu foncé */
-            text-align: center;
-            border-bottom: 2px solid #3498db; /* Ligne de séparation */
-            padding-bottom: 10px;
-        }
-
-        h2, h3 {
-            color: #2980b9; /* Bleu un peu plus clair */
-            margin-top: 30px; /* Espace avant les titres */
-        }
-
-        /* === Images === */
-        img {
-            display: block;
-            max-width: 100%; /* Images responsives */
-            height: auto;
-            margin: 20px auto; /* Centrage avec marges */
-            border: 1px solid #ddd;  /*Bordure légère */
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Ombre légère */
-        }
-
-        .fig-caption {
-            text-align: center;
-            font-style: italic;
-            margin-top: 5px;
-            color: #666;
-            font-size: 0.9em;
-        }
-    
-        /* === Paragraphes et texte === */
-        p {
-            margin-bottom: 15px; /* Espace entre paragraphes */
-        }
-
-        /* === Listes === */
-        ul {
-            padding-left: 20px; /* Alignement des puces */
-        }
-
-        li {
-            margin-bottom: 8px; /* Espace entre éléments de liste */
-        }
-
-        /* === Mise en valeur === */
-        .warning {
-            color: #e74c3c; /* Rouge pour les avertissements */
-            background-color: #fdeaea; /* Fond rouge très clair */
-            padding: 15px;
-            border-left: 4px solid #e74c3c; /* Bordure gauche */
-            margin: 20px 0;
-            font-weight: bold;
-        }
-
-        .note {
-            background-color: #e8f4fc; /* Fond bleu très clair */
-            padding: 15px;
-            border-left: 4px solid #3498db; /* Bordure gauche */
-            margin: 20px 0;
-        }
-
-        /* === Liens === */
-        a {
-            color: #3498db; /* Couleur bleue */
-            text-decoration: none; /* Pas de soulignement */
-        }
-
-        a:hover {
-            text-decoration: underline; /* Soulignement au survol */
-        }
-
-<!--         /* === Pied de page === */
-        .footer {
-            text-align: center;
-            margin-top: 40px;
-            padding-top: 20px;
-            border-top: 1px solid #ddd;
-            font-size: 0.9em;
-            color: #7f8c8d; /* Gris moyen */
-        }
- -->
-        /* === Responsive === */
-        @media (max-width: 600px) {
-            body {
-                padding: 10px;
-            }
-            h1 {
-                font-size: 1.5em;
-            }
-        }
-    </style>
 </head>
 <body>
-    <header style="background-color: transparent;">
-        <p style="text-align: center"><img src="../images_creapass/logo.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
-        <h1>Notice d'emploi - Creapass</h1>
-        <p class="note">Générateur de mots de passe aléatoires reproductibles et autonome</p>
+    <header>
+        <p style="text-align: center"><img src="../images_creapass/logo_3.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
+        <p>Générateur de mots de passe aléatoires,sûrs et reproductibles</p>
     </header>
 
-    <section class = "section-card">
+    <h1 style="text-align: center">Notice d'emploi - Creapass</h1>
+
+    <section class = "card">
         <h2>1 - Initialisation</h2>
         <p>Lorsque vous lancez Creapass pour la première fois, vous allez voir cette fenêtre :</p>
         <p style="text-align: center"><img src="../images_creapass/fig_1.webp" alt="Fenêtre d'initialisation"/></p>
@@ -144,7 +32,7 @@
         <p class="fig-caption">Figure 2 : Validation de l'initialisation</p>
     </section>
 
-    <section class = "section-card">
+    <section class = "card">
         <h2>2 - Utilisation de départ</h2>
         <p>Après l'initialisation, cette fenêtre apparaîtra au démarrage :</p>
         <p style="text-align: center"><img src="../images_creapass/fig_3.webp" alt="Fenêtre principale"/></p>
@@ -161,7 +49,7 @@
         <p class="fig-caption">Figure 4 : Mot de passe généré</p>
     </section>
 
-    <section class = "section-card">
+    <section class = "card">
         <h2>3 - Mini-interface</h2>
         <p>Pour une utilisation plus discrète, activez la mini-interface via le menu.<br>Attention, cette option du menu n'est accessible qu'après validation du mot de passe.</p>
         <p style="text-align: center"><img src="../images_creapass/fig_5.webp" alt="Activation mini-interface"/></p>
@@ -177,10 +65,10 @@
         <p class="fig-caption">Figure 6 : Mini-interface déplaçable</p>
         
         <p class="note">Astuce : Après choix du site, appuyez sur Entrée pour générer un mot de passe, puis à nouveau Entrée pour effacer et préparer une nouvelle génération.</p>
-        <p>Si vous avez choisi d'ouvrir directement sous la forme réduite, votre mot de passe vous est demandé.<br><strong>Attention,</strong>Ça suppose que vous maîtrisez le logiciel et que c'est votre mode travail courant ; vous n'aurez plus accès aux options « langue » et « thème »</p>
+        <p>Si vous avez choisi d'ouvrir directement sous la forme réduite, votre mot de passe vous est demandé.<br><strong>Attention,</strong> Ça suppose que vous maîtrisez le logiciel et que c'est votre mode travail courant ; vous n'aurez plus accès aux options « langue » et « thème » sauf à réinitialiser partiellement (alt+s)</p>
     </section>
 
-    <section class = "section-card">
+    <section class = "card">
         <h2>Aide et raccourcis</h2>
         <ul>
             <li><strong>F1</strong> : Aide contextuelle</li>
@@ -189,13 +77,11 @@
             <li><strong>Alt+m</strong>: Afficher/supprimer la barre système</li>
             <li><strong>Alt+s</strong>: (disponible uniquement en mini-interface) Revenir à l'interface normale</li>
             <li><strong>Ctrl+Alt+i+i</strong>: (Tapez 2 fois sur "i" avec Ctrl-Alt enfoncés)  Réinitialiser totalement le programme</li>
-
         </ul>
     </section>
 
-    <footer style="text-align: center">
-      Original en français, traductions mistral.ai et/ou deepl.com<br>&copy; Jean Dalbrut – Auteur de CréaPass
-    </footer>
-
+      <footer style="text-align: center">
+          Original en français, traductions mistral.ai et/ou deepl.com<br>&copy; Jean Dalbrut – Auteur de CréaPass
+      </footer>
 </body>
 </html>
